Fixed text alignment and padding issues

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@
 
 @media only screen and (max-device-width: 480px) {
 	.app__article-list {
-		width: 100%;
+		width: auto;
+		padding-left: 0px;
+		padding-right: 0px;
 	}
 }
