--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -33,6 +33,7 @@
 
 .card-text__summary {
 	flex: 1;
+	text-align: justify;
 	font-family: 'Open Sans';
 }
 
@@ -46,5 +47,9 @@
 	.card__image {
 		width: 100%;
 		margin-bottom: 16px;
+	}
+
+	.card-text {
+		padding-left: 0px;
 	}
 }
